# p-final

./: README.md
pack1/: CMakeLists.txt  package.xml
pack1/behavior_tree_xml/: thief.xml
pack1/include/pack1/: Back.hpp  Forward.hpp  Move.hpp  Turn.hpp
pack1/include/thief/: Move.hpp  Turn.hpp
pack1/launch/: thief.launch.py
pack1/src/: bt_thief_main.cpp
pack1/src/pack1/: Move.cpp  Turn.cpp
pack1/src/thief/: GetWaypoint.cpp  Move.cpp  Turn.cpp
thief/: CMakeLists.txt  package.xml
thief/behavior_tree_xml/: testing_tree.xml  thief.xml  thief_tree2.xml
thief/include/thief/: GetWaypoint.hpp  GetWaypoint2.hpp  Move.hpp  Move2.hpp  Turn.hpp
thief/include/thief/ctrl_support/: BTActionNode.hpp
thief/launch/: thief.launch.py
thief/maps/: lab_map.yaml  map_1746690639.pgm  map_1746690639.yaml  map_1746705886.pgm  mapa_bueno.pgm  mapa_bueno.yaml
thief/src/: bt_thief_main.cpp
thief/src/thief/: GetWaypoint.cpp  GetWaypoint2.cpp  Move.cpp  Move2.cpp  Move_nav.cpp  Turn.cpp
thief_noBT/: CMakeLists.txt  package.xml
thief_noBT/src/thief_noBT/: Turn.cpp
thief_no_bt/: CMakeLists.txt  package.xml
thief_no_bt/include/thief_no_bt/: Turn.hpp
thief_no_bt/maps/: lab_map.pgm
